--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      html, body {
+      html,
+      body {
         width: 100%;
         height: 100%;
         margin: 0;
@@ -31,34 +31,34 @@
   </head>
   <body>
     <script>
-      const oscillators = require("../dist").default;
-      const pkg = require("../package.json");
-      const QwertyHancock = require("qwerty-hancock");
-      const Reverb = require("soundbank-reverb");
-      const { remote } = require("electron");
+      const oscillators = require('../dist').default;
+      const pkg = require('../package.json');
+      const QwertyHancock = require('qwerty-hancock');
+      const Reverb = require('soundbank-reverb');
+      const { remote } = require('electron');
 
       remote.webContents.getFocusedWebContents().openDevTools();
 
       let ctx = new (window.AudioContext || window.webkitAudioContext)();
       let oscillator;
 
-      let oscillatorTypeSelect = document.createElement("select");
-      oscillatorTypeSelect.id = "oscillator-type-select";
-      Object.keys(oscillators).forEach(oscillatorType => {
-        let option = document.createElement("option");
+      let oscillatorTypeSelect = document.createElement('select');
+      oscillatorTypeSelect.id = 'oscillator-type-select';
+      Object.keys(oscillators).forEach((oscillatorType) => {
+        let option = document.createElement('option');
         option.value = option.text = oscillatorType;
         oscillatorTypeSelect.appendChild(option);
       });
       document.body.appendChild(oscillatorTypeSelect);
 
-      let keyboardDiv = document.createElement("div");
-      keyboardDiv.id = "keyboard";
+      let keyboardDiv = document.createElement('div');
+      keyboardDiv.id = 'keyboard';
       document.body.appendChild(keyboardDiv);
 
       let keyboard = new QwertyHancock({
-         id: keyboardDiv.id,
-         octaves: 6,
-         startNote: "A1"
+        id: keyboardDiv.id,
+        octaves: 6,
+        startNote: 'A1',
       });
       keyboard.keyDown = (note, frequency) => {
         oscillator = oscillators[oscillatorTypeSelect.value](ctx);
