Add html lang attribute

--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>web-audio-oscillators</title>
     <meta charset="utf-8" />
+    <title>web-audio-oscillators</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       html,
